--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,124 +4,153 @@
     android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
     tools:context=".MainActivity">
-
-    <LinearLayout
-        android:id="@+id/main_linear_layout"
+    
+    <RelativeLayout
+        android:id="@+id/outer_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/pink_floyd_trivia"
-            style="@style/title_text_view" />
+        <FrameLayout
+            android:id="@+id/frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view"
-            style="@style/card_view_app"
-            card_view:cardBackgroundColor="@color/teal050"
-            card_view:cardCornerRadius="@dimen/card_view_corner_radius">
-
-            <LinearLayout
-                android:id="@+id/free_text_linear_layout"
+            <ImageView
+                android:id="@+id/background"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:visibility="invisible">
+                android:contentDescription="@string/background"
+                android:scaleType="centerCrop"
+                android:src="@drawable/meddle_back" />
+
+            <View
+                android:id="@+id/gradient"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="@dimen/gradient_alpha"
+                android:background="@drawable/gradient" />
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/main_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/pink_floyd_trivia"
+                style="@style/title_text_view" />
+
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view"
+                style="@style/card_view_app"
+                card_view:cardBackgroundColor="@color/teal050"
+                card_view:cardCornerRadius="@dimen/card_view_corner_radius">
+
+                <LinearLayout
+                    android:id="@+id/free_text_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/free_text_text_view"
+                        style="@style/free_text_text_view" />
+
+                    <EditText
+                        android:id="@+id/free_text_edit_text"
+                        style="@style/free_text_edit_text"
+                        android:hint="@string/answer" />
+
+                </LinearLayout>
+
+                <RadioGroup
+                    android:id="@+id/radio_group_app"
+                    style="@style/radio_group_app"
+                    android:visibility="invisible">
+
+                    <TextView
+                        android:id="@+id/radio_question_text"
+                        style="@style/text_view_of_radio_group_app" />
+
+                    <RadioButton
+                        android:id="@+id/radio_question_option_a"
+                        style="@style/multiple_answer_item" />
+
+                    <RadioButton
+                        android:id="@+id/radio_question_option_b"
+                        style="@style/multiple_answer_item" />
+
+                    <RadioButton
+                        android:id="@+id/radio_question_option_c"
+                        style="@style/multiple_answer_item" />
+
+                    <RadioButton
+                        android:id="@+id/radio_question_option_d"
+                        style="@style/multiple_answer_item" />
+
+                </RadioGroup>
+
+                <RadioGroup
+                    android:id="@+id/check_box_group_app"
+                    style="@style/radio_group_app"
+                    android:visibility="invisible">
+
+                    <TextView
+                        android:id="@+id/check_box_question_text"
+                        style="@style/text_view_of_radio_group_app" />
+
+                    <CheckBox
+                        android:id="@+id/check_box_question_option_a"
+                        style="@style/multiple_answer_item" />
+
+                    <CheckBox
+                        android:id="@+id/check_box_question_option_b"
+                        style="@style/multiple_answer_item" />
+
+                    <CheckBox
+                        android:id="@+id/check_box_question_option_c"
+                        style="@style/multiple_answer_item" />
+
+                    <CheckBox
+                        android:id="@+id/check_box_question_option_d"
+                        style="@style/multiple_answer_item" />
+
+                </RadioGroup>
+
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/standard_horizontal_padding">
 
                 <TextView
-                    android:id="@+id/free_text_text_view"
-                    style="@style/free_text_text_view" />
+                    android:id="@+id/score"
+                    style="@style/bottom_text_view"
+                    android:text="@string/score" />
 
-                <EditText
-                    android:id="@+id/free_text_edit_text"
-                    style="@style/free_text_edit_text"
-                    android:hint="@string/answer" />
+                <Button
+                    android:id="@+id/submit_button"
+                    style="@style/bottom_element"
+                    android:onClick="submit"
+                    android:text="@string/submit" />
+
+                <TextView
+                    android:id="@+id/progress"
+                    style="@style/bottom_text_view"
+                    android:text="@string/progress" />
 
             </LinearLayout>
 
-            <RadioGroup
-                android:id="@+id/radio_group_app"
-                style="@style/radio_group_app"
-                android:visibility="invisible">
-
-                <TextView
-                    android:id="@+id/radio_question_text"
-                    style="@style/text_view_of_radio_group_app" />
-
-                <RadioButton
-                    android:id="@+id/radio_question_option_a"
-                    style="@style/multiple_answer_item" />
-
-                <RadioButton
-                    android:id="@+id/radio_question_option_b"
-                    style="@style/multiple_answer_item" />
-
-                <RadioButton
-                    android:id="@+id/radio_question_option_c"
-                    style="@style/multiple_answer_item" />
-
-                <RadioButton
-                    android:id="@+id/radio_question_option_d"
-                    style="@style/multiple_answer_item" />
-
-            </RadioGroup>
-
-            <RadioGroup
-                android:id="@+id/check_box_group_app"
-                style="@style/radio_group_app"
-                android:visibility="invisible">
-
-                <TextView
-                    android:id="@+id/check_box_question_text"
-                    style="@style/text_view_of_radio_group_app" />
-
-                <CheckBox
-                    android:id="@+id/check_box_question_option_a"
-                    style="@style/multiple_answer_item" />
-
-                <CheckBox
-                    android:id="@+id/check_box_question_option_b"
-                    style="@style/multiple_answer_item" />
-
-                <CheckBox
-                    android:id="@+id/check_box_question_option_c"
-                    style="@style/multiple_answer_item" />
-
-                <CheckBox
-                    android:id="@+id/check_box_question_option_d"
-                    style="@style/multiple_answer_item" />
-
-            </RadioGroup>
-
-        </android.support.v7.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/standard_horizontal_padding">
-
-            <TextView
-                android:id="@+id/score"
-                style="@style/bottom_text_view"
-                android:text="@string/score" />
-
-            <Button
-                android:id="@+id/submit_button"
-                style="@style/bottom_element"
-                android:onClick="submit"
-                android:text="@string/submit" />
-
-            <TextView
-                android:id="@+id/progress"
-                style="@style/bottom_text_view"
-                android:text="@string/progress" />
-
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </ScrollView>
